Fixed lint errors/warnings about "new ObjectName()" for simple data types, replaced it by "ObjectName.valueOf()".